# otus-cpp

./: .gitignore  CMakeLists.txt  README.md  functions.cpp  functions.h  hello_world.cpp  theGame.cpp  theGame.h  todo_move_me_out.cpp
menu/: menu.cpp  menu.h
